2002-05-03  Rik Faith  <faith@dict.org>

  * dict.c:
  Use user/key for default servers, not just command-line server

  * dict.c:
  Make sure pager is closed when reporting fatal error

  * Makefile.in: Bump version

2002-04-29  Rik Faith  <faith@dict.org>

  * daemon.c, dictd.8, dictd.c, index.c:
  Add --locale option
  Make log output 8-bit clean

2002-04-22  Rik Faith  <faith@dict.org>

  * Makefile.in: Bump version for testing

  * dictd.h, index.c:
  Fix support for locale patch

  * index.c:
  Apply patches from Aleksey Cheusov to make dictd know about locale
  If LC_CTYPE and LC_COLLATE are the same for dictfmt and dictd, then a non C collating order should work.

  * daemon.c, dictd.h:
  Make -l connect log something (under :K:)

  * dictzip.c:
  Fix Debian Bug#142672: dictunzip problem with single chunk files

2002-03-31  Rik Faith  <faith@dict.org>

  * Makefile.in:
  Update permissions on files placed into distribution tarball.

  * libmaa/log.c: Remove debugging statements

  * libmaa/log.c: Fix log file path creation

  * Makefile.in: Bump version for testing

  * libmaa/log.c: Make path for log file

  * regex/Makefile, regex/README.DICT:
  Do not rebuild library each time make is called

  * INSTALL, daemon.c, dictd.8:
  Improve documentation
  Fix authentication match reporting
  Prevent core dump if user is NULL
  Improve reporting of access denial

  * Makefile.in: Use INSTALL* macros
  Make directories if they do not exist

  * libmaa/log.c:
  Do not close stdout or stderr when other log files are closed

  * dict.c: Allow -u option to work

2002-03-30  Rik Faith  <faith@dict.org>
