@@ -3,7 +3,7 @@
  * For conditions of distribution and use, see copyright notice in zlib.h 
  */
 
-/* @(#) $Id: crc32.c,v 1.2 2002/05/03 14:12:24 faith Exp $ */
+/* @(#) $Id: crc32.c,v 1.3 2002/08/02 19:43:15 faith Exp $ */
 
 #include "zlib.h"
 
