@@ -47,7 +47,7 @@
  *
  */
 
-/* @(#) $Id: deflate.c,v 1.2 2002/05/03 14:12:24 faith Exp $ */
+/* @(#) $Id: deflate.c,v 1.3 2002/08/02 19:43:15 faith Exp $ */
 
 #include "deflate.h"
 
