@@ -5,7 +5,7 @@
  * Compile this file with -DNO_DEFLATE to avoid the compression code.
  */
 
-/* @(#) $Id: gzio.c,v 1.2 2002/05/03 14:12:24 faith Exp $ */
+/* @(#) $Id: gzio.c,v 1.3 2002/08/02 19:43:15 faith Exp $ */
 
 #include <stdio.h>
 
