@@ -29,7 +29,7 @@
  *          Addison-Wesley, 1983. ISBN 0-201-06672-6.
  */
 
-/* @(#) $Id: trees.c,v 1.2 2002/05/03 14:12:24 faith Exp $ */
+/* @(#) $Id: trees.c,v 1.3 2002/08/02 19:43:15 faith Exp $ */
 
 /* #define GEN_TREES_H */
 
