@@ -8,7 +8,7 @@
    subject to change. Applications should only use zlib.h.
  */
 
-/* @(#) $Id: zutil.h,v 1.2 2002/05/03 14:12:24 faith Exp $ */
+/* @(#) $Id: zutil.h,v 1.3 2002/08/02 19:43:15 faith Exp $ */
 
 #ifndef _Z_UTIL_H
 #define _Z_UTIL_H
