@@ -1,3 +1,9 @@
+2002-05-05  Rik Faith  <faith@dict.org>
+
+  * Makefile.in, dictd.c:
+  Process --locale option
+  Bump version
+
 2002-05-03  Rik Faith  <faith@dict.org>
 
   * dict.c:
